# hdtc

./: .dockerignore  CLAUDE.md  Cargo.toml  Dockerfile  PLAN.md  README.md  void-output-schema.mmd
.github/workflows/: rust.yml
src/: cli.rs  main.rs
src/dictionary/: builder.rs  mod.rs  pfc.rs  sst.rs
src/hdt/: dump.rs  index_reader.rs  input_adapter.rs  mod.rs  pfc_reader.rs  reader.rs  search.rs  void.rs  writer.rs
src/index/: decoder.rs  mod.rs  ops_triple.rs  predicate_index.rs  writer.rs
src/io/: bitmap.rs  control.rs  crc_utils.rs  log_array.rs  mod.rs  vbyte.rs
src/pipeline/: batch_vocab.rs  id_remapper.rs  mod.rs  partial_vocab.rs  vocab_merger.rs
src/quads/: mod.rs
src/rdf/: input.rs  mod.rs  parser.rs
src/sort/: external.rs  mod.rs  parallel_merge.rs
src/triples/: builder.rs  id_triple.rs  mod.rs
tests/: compat_test.rs  integration_test.rs  roundtrip_test.rs  search_test.rs  void_test.rs
tests/common/: mod.rs
tests/data/: representative.nt  simple.nt
tests/data/roundtrip/: basic.nt  taj-mahal.jsonld  taj-mahal.n3  taj-mahal.nt  taj-mahal.rdf  taj-mahal.ttl
