[package]
name = "hdtc"
version = "0.1.0"
edition = "2024"
description = "HDT Creator - converts RDF files to HDT format"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crc = "3"
flate2 = "1"
bzip2 = "0.5"
xz2 = "0.1"
rayon = "1"
tempfile = "3"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"
oxrdfio = "0.2"
oxrdf = "0.3"
indicatif = "0.17"
zstd = "0.13"
crossbeam-channel = "0.5"
hashbrown = "0.15"
bumpalo = "3"
bitflags = "2"

[dev-dependencies]
hdt = "0.4"

[profile.release]
lto = true
codegen-units = 1
